# esa_spoc_26_3

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GOALS.md  LESSONS-LEARNED.md  META.md  README.md  doc_lessons.md  doc_methodology.md  environment.yml  pyproject.toml
.claude/commands/: deepaudit.md  housekeeping.md
runs/ch1/: 19_validate_diverse.json  bcp_apogee_expand_results.json  bcp_apogee_expand_v3_results.json  bcp_apogee_expand_v6_results.json  bcp_apogee_expand_v7_results.json  bcp_apogee_expand_v8_results.json  e565_phase_a.pkl  e570_phaseA_109_183.pkl  e570_phaseA_131_169.pkl  e570_phaseA_138_199.pkl  e570_phaseA_162_194.pkl  e570_phaseA_172_219.pkl  e570_phaseA_194_213.pkl  e570_phaseA_237_259.pkl  e570_phaseA_254_272.pkl  e570_phaseA_303_251.pkl  e570_phaseA_313_187.pkl  e570_phaseA_315_224.pkl  e570_phaseA_343_207.pkl  (+42 more)
scripts/: _audit_hard32_scan.py  _prov.py  ch1_2impulse_test.py  ch1_3impulse_polish.py  ch1_apogee_polish.py  ch1_apply_long_tof.py  ch1_archipelago.py  ch1_assign_sample.py  ch1_auction.py  ch1_auction_repair_lns.py  ch1_audit_apogee.py  ch1_audit_decomp.py  ch1_audit_measure.py  ch1_auto_pipeline.sh  ch1_b2_polish.py  ch1_b2_test.py  ch1_backshoot_ecc.py  ch1_backshoot_fixed.py  ch1_backshoot_global.py  ch1_backshoot_test.py  ch1_backstate_pc.py  ch1_bcp_apogee_expand.py  ch1_bcp_apogee_expand_v3.py  ch1_bcp_apogee_expand_v4.py  ch1_bcp_apogee_expand_v5.py  ch1_bcp_apogee_expand_v6.py  ch1_bcp_apogee_expand_v7.py  ch1_bcp_apogee_expand_v8.py  ch1_bcp_apogee_expand_v9.py  ch1_bcp_apogee_polish.py  ch1_bcp_synodic_solve.py  ch1_capture_homotopy.py  ch1_circ_archi.py  ch1_circ_dist.py  ch1_circular_capture_probe.py  ch1_circular_dc6.py  ch1_circular_impulsive_floor.py  ch1_circular_structured_test.py  ch1_closure_residual_probe.py  ch1_cmaes_refine.py  (+367 more)
tools/: README.md  fix_dangling_links.py
vault/: abbreviations.md  assumptions.md  frontier.base  index.md  loop-state.md  open-paths.md  user.md
(+435 files in other folders)
